tests/snapshots/yaml_suite_snapshots__yaml_suite_JTV5_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "a true: null d\ne 42:\n"
  from: NimYAML tests
  json: "{\n  \"a true\": \"null d\",\n  \"e 42\": null\n}\n"
  name: Block Mapping with Multiline Scalars
  tags: explicit-key mapping scalar
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :a true\n   =VAL :null d\n   =VAL :e 42\n   =VAL :\n  -MAP\n -DOC\n-STR\n"
  yaml: "? a\n  true\n: null\n  d\n? e\n  42\n"
