tests/snapshots/yaml_suite_snapshots__yaml_suite_K3WX_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Colon and adjacent value after comment on next line
  from: "<Source URL or description>"
  tags: comment flow mapping
  yaml: "---\n{ \"foo\" # comment\n  :bar }\n"
  tree: "+STR\n +DOC ---\n  +MAP {}\n   =VAL \"foo\n   =VAL :bar\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"foo\": \"bar\"\n}\n"
  dump: "---\n\"foo\": bar\n"
