tests/snapshots/yaml_suite_snapshots__yaml_suite_K3WX_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "---\n\"foo\": bar\n"
  from: "<Source URL or description>"
  json: "{\n  \"foo\": \"bar\"\n}\n"
  name: Colon and adjacent value after comment on next line
  tags: comment flow mapping
  tree: "+STR\n +DOC ---\n  +MAP {}\n   =VAL \"foo\n   =VAL :bar\n  -MAP\n -DOC\n-STR\n"
  yaml: "---\n{ \"foo\" # comment\n  :bar }\n"
