tests/snapshots/yaml_suite_snapshots__yaml_suite_K4SU_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Multiple Entry Block Sequence
  from: "https://github.com/ingydotnet/yaml-pegex-pm/blob/master/test/sequence.tml"
  tags: sequence
  yaml: "- foo\n- bar\n- 42\n"
  tree: "+STR\n +DOC\n  +SEQ\n   =VAL :foo\n   =VAL :bar\n   =VAL :42\n  -SEQ\n -DOC\n-STR\n"
  json: "[\n  \"foo\",\n  \"bar\",\n  42\n]\n"
