tests/snapshots/yaml_suite_snapshots__yaml_suite_K4SU_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- from: "https://github.com/ingydotnet/yaml-pegex-pm/blob/master/test/sequence.tml"
  json: "[\n  \"foo\",\n  \"bar\",\n  42\n]\n"
  name: Multiple Entry Block Sequence
  tags: sequence
  tree: "+STR\n +DOC\n  +SEQ\n   =VAL :foo\n   =VAL :bar\n   =VAL :42\n  -SEQ\n -DOC\n-STR\n"
  yaml: "- foo\n- bar\n- 42\n"
